--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   background-size: cover;
   */
   background: var(--bg-img) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -158,4 +159,16 @@ footer {
 
 footer a {
   text-decoration: none;
+}
+
+/* Media Queries */
+
+/* Background change on device viewport size */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(assets/bg-desktop-light.jpg);
+  }
 }
