fix typo in light mode bg image

--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ footer a {
   :root {
     --bg-url: url(assets/bg-desktop.jpg);
   }
-  .light {
+  .lightmode {
     --bg-url: url(assets/bg-desktop-light.jpg);
   }
 }
