--- a/style.css
+++ b/style.css
@@ -173,10 +173,10 @@ footer a {
 /* Background change on device viewport size */
 @media (min-width: 700px) {
   :root {
-    --bg-url: url(assets/bg-desktop.jpg);
+    --bg-img: url(assets/bg-desktop.jpg);
   }
   .lightmode {
-    --bg-url: url(assets/bg-desktop-light.jpg);
+    --bg-img: url(assets/bg-desktop-light.jpg);
   }
 }
 
