fix scroll bar appearing

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   */
   background: var(--bg-img) no-repeat top center/cover;
   transition: background 0.2s;
-  height: 100vh;
+  height: 100%;
 }
 
 body * {
@@ -122,9 +122,9 @@ ul li a {
   background-color: var(--button-fill);
   border: 1px solid var(--button-stroke);
   border-radius: 8px;
-  backdrop-filter: blur(4px);
   /* Compatibilidade com navegadores antigos */
   -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
   font-weight: 500;
   text-decoration: none;
   transition: background-color 0.5s, border 0.5s;
@@ -149,9 +149,9 @@ ul li a:hover {
   padding: 16px;
   border-radius: 50%;
   transition: background-color 0.5s;
-  backdrop-filter: blur(4px);
   /* Compatibilidade com navegadores antigos */
   -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
 }
 
 #social a:hover {
